confronto tra  2 prodotti

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,15 @@ li {
 .card:hover {
 	background-color: lightgray;
 }
+
+.card {
+	position: relative;
+}
+
+.heart {
+	position: absolute;
+	top: 0;
+	right: 0;
+	color: red;
+	cursor: pointer;
+}
