--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@
 th,
 td {
 	background-color: lightgray !important;
-	border: none;
 	padding: 0.2rem !important;
 }
 body {
@@ -54,4 +53,9 @@ li {
 }
 .offcanvas {
 	background-color: rgba(220, 220, 220, 0.9) !important;
+	max-width: 315px;
+}
+.input {
+	width: 190px;
+	height: 40px;
 }
