--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,9 @@ li {
 	width: fit-content;
 	height: 40px;
 }
+.descrizione-prodotto {
+	text-align: justify;
+}
 
 @media screen and (min-width: 1024px) {
 	.general-spec {
