--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
 	justify-content: center;
 	align-items: center;
 }
-
 .logo {
 	width: 50px;
 	height: 50px;
@@ -54,13 +53,18 @@ li {
 }
 .offcanvas {
 	background-color: rgba(220, 220, 220, 0.9) !important;
-	max-width: 315px;
+	min-width: 315px;
+	max-width: fit-content;
 }
 .input {
-	width: fit-content;
 	height: 40px;
 	width: 200px;
-	padding: 0px !important;
+	padding: 2px !important;
+}
+.input-compare-product {
+	width: fit-content;
+	height: 40px;
+	padding: 2px !important;
 }
 .descrizione-prodotto {
 	text-align: justify;
