--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,15 @@ li {
 .titolo-card {
 	height: 80px;
 }
+.laptop {
+	background-color: rgba(255, 0, 0, 0.5) !important;
+}
+.tablet {
+	background-color: rgba(2, 176, 250, 0.7) !important;
+}
+.smartphone {
+	background-color: rgba(255, 255, 0, 0.5) !important;
+}
 @media screen and (min-width: 1024px) {
 	.image-product {
 		height: 330px;
