--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,12 @@
 	width: 50px;
 	height: 50px;
 }
-.navbar {
+.navbar,
+footer {
 	background-color: rgb(110, 109, 109) !important;
+}
+footer {
+	height: max-content;
 }
 th,
 td {
@@ -28,7 +32,8 @@ body {
 	background-color: lightgray;
 	height: max-content;
 }
-.navbar a {
+.navbar a,
+.footer span {
 	color: white;
 }
 a {
@@ -56,9 +61,13 @@ li {
 	min-width: 315px;
 	max-width: fit-content;
 }
-.input {
+.input-home {
 	height: 40px;
 	width: 200px;
+	padding: 2px !important;
+}
+.input {
+	height: 40px;
 	padding: 2px !important;
 }
 .input-compare-product {
@@ -89,7 +98,7 @@ li {
 		height: 330px;
 	}
 	.general-spec {
-		min-height: 523px;
+		min-height: 500px;
 		max-height: max-content;
 	}
 	.spec-spec {
