--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+body {
+	margin: 0;
+	padding: 0 !important;
+	position: relative;
+	min-height: 100vh;
+	background-color: lightgray;
+}
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+.col-footer {
+	padding: 0 0;
+}
+main {
+	padding-bottom: 10rem;
+}
 .spinner-container {
 	position: fixed;
 	top: 0;
@@ -17,16 +35,10 @@
 footer {
 	background-color: rgb(110, 109, 109) !important;
 }
-footer {
-	height: max-content;
-}
 th,
 td {
 	background-color: lightgray !important;
 	padding: 0.2rem !important;
-}
-body {
-	background-color: lightgray;
 }
 .card {
 	background-color: lightgray;
@@ -93,27 +105,30 @@ li {
 .smartphone {
 	background-color: rgba(255, 255, 0, 0.5) !important;
 }
+.img-download {
+	width: 70px;
+	height: 40px;
+}
 @media screen and (min-width: 1024px) {
 	.image-product {
 		height: 330px;
 	}
 	.general-spec {
-		min-height: 500px;
-		max-height: max-content;
+		min-height: max-content;
+		max-height: 500px;
 	}
 	.spec-spec {
 		min-height: 750px;
 		max-height: max-content;
 	}
 }
-
 @media screen and (min-width: 1440px) {
 	.image-product {
 		height: 410px;
 	}
 	.general-spec {
-		min-height: 400px;
-		max-height: max-content;
+		min-height: 450px;
+		max-height: 600px;
 	}
 	.spec-spec {
 		min-height: 500px;
